--- a/sass/elements/_elements.scss
+++ b/sass/elements/_elements.scss
@@ -10,7 +10,7 @@ html {
 
 body {
 	background: $color__background-body; /* Fallback for when there is no custom background color defined. */
-    margin: 0;
+	margin: 0; /* RV | Necessary? */
 }
 
 blockquote, q {
