--- a/sass/site/_site.scss
+++ b/sass/site/_site.scss
@@ -18,14 +18,14 @@
 /*--------------------------------------------------------------
 ## Sitewide
 --------------------------------------------------------------*/
-@import "components/sitewide";
+/* @import "components/sitewide"; */
 
 /*--------------------------------------------------------------
 ## Header
 --------------------------------------------------------------*/
-@import "components/header";
+/* @import "components/header"; */
 
 /*--------------------------------------------------------------
 ## Footer
 --------------------------------------------------------------*/
-@import "components/footer";
+/* @import "components/footer"; */
