--- a/style.css
+++ b/style.css
@@ -874,6 +874,12 @@ input.search-field {
   text-align: center; }
 
 /*--------------------------------------------------------------
+# WIDGETS
+--------------------------------------------------------------*/
+.widget.suboptions, .widget_archive {
+  text-align: center; }
+
+/*--------------------------------------------------------------
 # RECENT COMMENTS
 --------------------------------------------------------------*/
 .recent-comment-widget {
@@ -1061,8 +1067,12 @@ input.search-field {
   .site-description a {
     font-size: 1em !important; }
 
-  #post-author, #post-category, #post-date span.separator {
+  #post-author {
     display: none; }
+
+  #post-date span.separator {
+    margin-left: 0.5em;
+    margin-right: 0.5em; }
 
   .aboutme_username, .aboutme_description {
     font-size: 0.866667em !important; }
