--- a/sass/_av-misc.scss
+++ b/sass/_av-misc.scss
@@ -584,3 +584,14 @@ font-size: 1.5em;
   width: 161px;
   height: 161px;
 }
+
+/*--------------------------------------------------------------
+# Image Alignment: https://codex.wordpress.org/Styling_Images_in_Posts_and_Pages
+--------------------------------------------------------------*/
+/*
+img.alignright {float:right; margin:0 0 1em 1em}
+img.alignleft {float:left; margin:0 1em 1em 0}
+img.aligncenter {display: block; margin-left: auto; margin-right: auto}
+a img.alignright {float:right; margin:0 0 1em 1em}
+a img.alignleft {float:left; margin:0 1em 1em 0}
+a img.aligncenter {display: block; margin-left: auto; margin-right: auto} */
