--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,8 +4,8 @@
     <span class='box second'></span>
     <span class='box third'></span>
   </span>
-  <h1>adaptive backgrounds</h1>
-  <h3>A jQuery plugin for extracting dominant colors from images and applying it to its parent.</h3>
-  <a href='https://github.com/briangonzalez/jquery.adaptive-backgrounds.js' class='button mr'>Github</a>
-  <a href='#' class='button tweet'>Tweet</a>
+  <h1>AreaVoices</h1>
+  <h3>A contributor theme for the AreaVoices network.</h3>
+  <a href='https://github.com/openfcci/areavoices-theme' class='button mr'>Github</a>
+  <a href='https://github.com/openfcci/areavoices-theme/zipball/master' class='button mr'>Download .zip file</a>
 </header>
