--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,3 @@
 <footer>
-Made by the <strike>super nerdy</strike> wildly talented
-<a href="http://briangonzalez.org">Brian Gonzalez</a> </br>
-Images from <a href="http://typehunting.com/" target='blank'>TypeHunting</a></br>
-<!-- <a href="http://briangonzalez.org">Brian Gonzalez</a> </br> -->
-<div class='twitter-wrap'>
-  {% include twitter.html %}
-</div>
+Made &amp; maintained by <a href="http://forumcomm.com">FCC Digital</a>
 </footer>
