--- a/_scss/styles.scss
+++ b/_scss/styles.scss
@@ -21,8 +21,8 @@ $darkgrey: #333;
 $lightgrey: #eee;
 $darkblue: #56575c;
 
-$yellow: #eac56a;
-$red: #d27f6d;
+$yellow: #54A1BF;
+$red: #8c8c8c;
 
 body{
   font-family: Lato, arial;
