--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
   <h1>AreaVoices</h1>
   <h3>A contributor theme for the AreaVoices network.</h3>
   <a href='https://github.com/openfcci/areavoices-theme' class='button mr'>Github</a>
-  <a href='http://avtheme.areavoices.com/' class='button mr'>Live Demo</a>
-  <a href='https://github.com/openfcci/areavoices-theme/wiki' class='button tweet'>Learn More</a>
+  <a href='http://avtheme.areavoices.com/' class='button mr' target="_blank">Live Demo</a>
+  <a href='https://github.com/openfcci/areavoices-theme/wiki' class='button mr'>Learn More</a>
   <!--<a href='https://github.com/openfcci/areavoices-theme/zipball/master' class='button mr'>Download</a>-->
 </header>
