--- a/style.css
+++ b/style.css
@@ -955,7 +955,7 @@ input.search-field {
   background: #ccc;
   text-align: center; }
 
-#slider .featured-info-wrapper {
+#slider .featured-wrapper {
   /* margin: auto; */
   /*RV*/
   display: block;
@@ -967,12 +967,34 @@ input.search-field {
   /* bottom: 20px; */
   /*RV*/
   text-align: left;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-repeat:no-repeat;
+background-position: center center;
   color: #fff;
   box-sizing: border-box;
-  padding: 200px 20px 20px 20px;
+  
   /*RV*/
   font-family: "AvenirNextW10Demi"; }
+
+#slider .slider-gradient{
+  background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.15) 61%, rgba(0,0,0,0.55) 84%, rgba(0,0,0,0.75) 96%, rgba(0,0,0,0.75) 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0)), color-stop(61%,rgba(0,0,0,0.15)), color-stop(84%,rgba(0,0,0,0.55)), color-stop(96%,rgba(0,0,0,0.75)), color-stop(100%,rgba(0,0,0,0.75))); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.15) 61%,rgba(0,0,0,0.55) 84%,rgba(0,0,0,0.75) 96%,rgba(0,0,0,0.75) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.15) 61%,rgba(0,0,0,0.55) 84%,rgba(0,0,0,0.75) 96%,rgba(0,0,0,0.75) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.15) 61%,rgba(0,0,0,0.55) 84%,rgba(0,0,0,0.75) 96%,rgba(0,0,0,0.75) 100%); /* IE10+ */
+background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.15) 61%,rgba(0,0,0,0.55) 84%,rgba(0,0,0,0.75) 96%,rgba(0,0,0,0.75) 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#bf000000',GradientType=0 ); /* IE6-9 */
+height: 100%;
+}
+
+#slider .featured-info-wrapper{
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+  right: 20px;
+  display: inline-block;
+  margin: auto;
+
+}
 
 #slider .featured-category {
   background-color: #333;
