added slider links and hover states

--- a/style.css
+++ b/style.css
@@ -952,8 +952,19 @@ input.search-field {
   padding: 0;
   width: 25%;
   height: 350px;
-  background: #ccc;
+  background: #000;
   text-align: center; }
+
+  #slider ul li div.slider-gradient{
+    -webkit-transition: background-color 0.2s;
+    transition: background-color 0.2s;
+  }
+
+  #slider ul li div.slider-gradient:hover {
+    background-color: rgba(0, 0, 0, 0.5); 
+    -webkit-transition: background-color 0.2s;
+    transition: background-color 0.2s;
+  }
 
 #slider .featured-wrapper {
   /* margin: auto; */
@@ -1019,24 +1030,31 @@ height: 100%;
 
 #slider a.control_prev, #slider a.control_next {
   position: absolute;
-  top: 40%;
+  top: 0;
+  bottom: 0;
   z-index: 999;
   display: block;
   padding: 1% 1%;
   /* RV */
   width: auto;
-  height: auto;
+  height: 100%;
   background: #2a2a2a;
   color: #fff;
   text-decoration: none;
   font-weight: 600;
-  font-size: 18px;
-  opacity: 0.8;
+  font-size: 25px;
+  opacity: 0;
   cursor: pointer; }
 
 #slider a.control_prev:hover, #slider a.control_next:hover {
   opacity: 1;
   -webkit-transition: all 0.2s ease; }
+
+#slider a.control_prev span, #slider a.control_next span{
+  position: relative;
+  top: 45%;
+  transform: translateY(-50%);
+}
 
 #slider a.control_prev {
   border-radius: 0 2px 2px 0; }
