--- a/css/avicons.css
+++ b/css/avicons.css
@@ -1,16 +1,17 @@
 @font-face {
 	font-family: 'avicons';
-	src:url('fonts/avicons.eot?kmhg6p');
-	src:url('fonts/avicons.eot?kmhg6p#iefix') format('embedded-opentype'),
-		url('fonts/avicons.ttf?kmhg6p') format('truetype'),
-		url('fonts/avicons.woff?kmhg6p') format('woff'),
-		url('fonts/avicons.svg?kmhg6p#avicons') format('svg');
+	src:url('fonts/avicons.eot?ibc27w');
+	src:url('fonts/avicons.eot?ibc27w#iefix') format('embedded-opentype'),
+		url('fonts/avicons.ttf?ibc27w') format('truetype'),
+		url('fonts/avicons.woff?ibc27w') format('woff'),
+		url('fonts/avicons.svg?ibc27w#avicons') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
 
 [class^="avicon-"], [class*=" avicon-"] {
-	font-family: 'avicons';
+    /* use !important to prevent issues with browser extensions that change fonts */
+	font-family: 'avicons' !important;
 	speak: none;
 	font-style: normal;
 	font-weight: normal;
@@ -23,6 +24,9 @@
 	-moz-osx-font-smoothing: grayscale;
 }
 
+.avicon-av-dashicon:before {
+	content: "\e95b";
+}
 .avicon-flickr:before {
 	content: "\e900";
 }
@@ -38,8 +42,26 @@
 .avicon-file-media:before {
 	content: "\f012";
 }
+.avicon-flame:before {
+	content: "\f0d2";
+}
+.avicon-gist-secret:before {
+	content: "\f08c";
+}
 .avicon-info:before {
 	content: "\f059";
+}
+.avicon-issue-opened:before {
+	content: "\f026";
+}
+.avicon-key:before {
+	content: "\f049";
+}
+.avicon-light-bulb:before {
+	content: "\f000";
+}
+.avicon-milestone:before {
+	content: "\f075";
 }
 .avicon-radio-tower:before {
 	content: "\f030";
@@ -68,6 +90,9 @@
 .avicon-bullhorn:before {
 	content: "\e61b";
 }
+.avicon-profile2:before {
+	content: "\e94c";
+}
 .avicon-price-tag:before {
 	content: "\e61c";
 }
@@ -80,17 +105,32 @@
 .avicon-quotes-right:before {
 	content: "\e621";
 }
+.avicon-wrench:before {
+	content: "\e94d";
+}
 .avicon-cog:before {
 	content: "\e622";
 }
 .avicon-cogs:before {
 	content: "\e623";
 }
+.avicon-fire:before {
+	content: "\e94e";
+}
+.avicon-shield:before {
+	content: "\e94f";
+}
 .avicon-menu2:before {
 	content: "\e627";
 }
+.avicon-menu22:before {
+	content: "\e950";
+}
 .avicon-menu3:before {
 	content: "\e80b";
+}
+.avicon-menu4:before {
+	content: "\e951";
 }
 .avicon-share2:before {
 	content: "\e628";
@@ -140,11 +180,38 @@
 .avicon-queue_music:before {
 	content: "\e020";
 }
+.avicon-web:before {
+	content: "\e034";
+}
 .avicon-email:before {
 	content: "\e04c";
 }
 .avicon-speaker_phone:before {
 	content: "\e05b";
+}
+.avicon-vpn_key:before {
+	content: "\e063";
+}
+.avicon-drafts:before {
+	content: "\e075";
+}
+.avicon-flag:before {
+	content: "\e077";
+}
+.avicon-link:before {
+	content: "\e07b";
+}
+.avicon-report:before {
+	content: "\e084";
+}
+.avicon-now_wallpaper:before {
+	content: "\e0ac";
+}
+.avicon-storage:before {
+	content: "\e0bc";
+}
+.avicon-format_paint:before {
+	content: "\e0dd";
 }
 .avicon-folder:before {
 	content: "\e101";
@@ -152,11 +219,80 @@
 .avicon-folder_open:before {
 	content: "\e102";
 }
+.avicon-brush:before {
+	content: "\e143";
+}
+.avicon-camera_roll:before {
+	content: "\e148";
+}
+.avicon-color_lens:before {
+	content: "\e14c";
+}
+.avicon-crop:before {
+	content: "\e153";
+}
+.avicon-details:before {
+	content: "\e15d";
+}
+.avicon-edit:before {
+	content: "\e15e";
+}
+.avicon-grid_on:before {
+	content: "\e180";
+}
+.avicon-portrait:before {
+	content: "\e1a7";
+}
+.avicon-view_compact:before {
+	content: "\e1bc";
+}
+.avicon-arrow_back:before {
+	content: "\e200";
+}
+.avicon-arrow_drop_down:before {
+	content: "\e201";
+}
+.avicon-arrow_drop_down_circle:before {
+	content: "\e202";
+}
+.avicon-arrow_drop_up:before {
+	content: "\e203";
+}
+.avicon-arrow_forward:before {
+	content: "\e204";
+}
+.avicon-cancel4:before {
+	content: "\e205";
+}
+.avicon-check:before {
+	content: "\e206";
+}
+.avicon-chevron_left:before {
+	content: "\e207";
+}
+.avicon-chevron_right:before {
+	content: "\e208";
+}
+.avicon-close:before {
+	content: "\e209";
+}
+.avicon-expand_less:before {
+	content: "\e20a";
+}
+.avicon-expand_more:before {
+	content: "\e20b";
+}
 .avicon-menu:before {
 	content: "\e20e";
 }
+.avicon-vpn_lock:before {
+	content: "\e233";
+}
 .avicon-person:before {
 	content: "\e253";
+}
+.avicon-public:before {
+	content: "\e258";
 }
 .avicon-star:before {
 	content: "\e260";
@@ -170,14 +306,38 @@
 .avicon-check_circle:before {
 	content: "\e281";
 }
+.avicon-chrome_reader_mode:before {
+	content: "\e282";
+}
 .avicon-favorite:before {
 	content: "\e291";
 }
 .avicon-favorite_outline:before {
 	content: "\e292";
 }
+.avicon-lock:before {
+	content: "\e2ab";
+}
+.avicon-lock_open:before {
+	content: "\e2ac";
+}
+.avicon-lock_outline:before {
+	content: "\e2ad";
+}
+.avicon-payment:before {
+	content: "\e2b5";
+}
+.avicon-picture_in_picture:before {
+	content: "\e2be";
+}
+.avicon-report_problem:before {
+	content: "\e2c6";
+}
 .avicon-settings:before {
 	content: "\e2cb";
+}
+.avicon-settings_voice:before {
+	content: "\e2db";
 }
 .avicon-thumb_down:before {
 	content: "\e2ed";
@@ -188,11 +348,35 @@
 .avicon-trending_up:before {
 	content: "\e2f7";
 }
+.avicon-verified_user:before {
+	content: "\e2fa";
+}
 .avicon-view_agenda:before {
 	content: "\e2fb";
 }
+.avicon-view_array:before {
+	content: "\e2fc";
+}
 .avicon-view_carousel:before {
 	content: "\e2fd";
+}
+.avicon-view_column:before {
+	content: "\e2fe";
+}
+.avicon-view_day:before {
+	content: "\e2ff";
+}
+.avicon-view_module:before {
+	content: "\e302";
+}
+.avicon-view_quilt:before {
+	content: "\e303";
+}
+.avicon-visibility:before {
+	content: "\e306";
+}
+.avicon-visibility_off:before {
+	content: "\e307";
 }
 .avicon-number:before {
 	content: "\e903";
@@ -335,6 +519,15 @@
 .avicon-satellite:before {
 	content: "\e931";
 }
+.avicon-key2:before {
+	content: "\e952";
+}
+.avicon-locked:before {
+	content: "\e953";
+}
+.avicon-unlocked:before {
+	content: "\e954";
+}
 .avicon-magnifier:before {
 	content: "\e932";
 }
@@ -404,6 +597,21 @@
 .avicon-profile:before {
 	content: "\e939";
 }
+.avicon-dollar:before {
+	content: "\e955";
+}
+.avicon-dollar2:before {
+	content: "\e956";
+}
+.avicon-coins:before {
+	content: "\e957";
+}
+.avicon-pig:before {
+	content: "\e958";
+}
+.avicon-safe:before {
+	content: "\e959";
+}
 .avicon-envelope:before {
 	content: "\e93a";
 }
@@ -457,6 +665,9 @@
 }
 .avicon-clipboard2:before {
 	content: "\e94a";
+}
+.avicon-ruler:before {
+	content: "\e95a";
 }
 .avicon-paperplane:before {
 	content: "\e94b";
