--- a/style.css
+++ b/style.css
@@ -1250,11 +1250,33 @@ h4 {
   padding-top: 20px; }
 
 #aboutme_pic {
+  border: none;
+  width: 161px;
+  height: 161px; }
+
+#aboutme_pic_border {
   border-style: solid;
   border-width: 6px;
   border-color: #E4E4E4;
   width: 161px;
   height: 161px; }
+
+#aboutme_pic_circle {
+  width: 161px;
+  height: 161px;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%; }
+
+#aboutme_pic_circle_border {
+  border-style: solid;
+  border-width: 6px;
+  border-color: #E4E4E4;
+  width: 161px;
+  height: 161px;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%; }
 
 /* Fix Image Caption Left Alignment */
 figure.wp-caption.alignleft {
