--- a/style.css
+++ b/style.css
@@ -935,6 +935,17 @@ input.search-field {
   border-radius: 4px;
   width: 100%; }
 
+#slider.layout2 {
+  visibility: hidden; }
+  @media (min-width: 420px) {
+    #slider.layout2 {
+      height: 450px;
+      margin-top: 20px; } }
+
+#slider.layout2 ul {
+  overflow: visible;
+  height: 450px; }
+
 #slider ul {
   position: relative;
   margin: 0;
@@ -952,8 +963,31 @@ input.search-field {
   padding: 0;
   width: 25%;
   height: 350px;
-  background: #000;
   text-align: center; }
+
+#slider.layout2 ul li {
+  width: 50%;
+  border-right: 30px solid transparent;
+  border-left: 30px solid transparent;
+  margin-top: 50px; }
+  @media (min-width: 420px) {
+    #slider.layout2 ul li {
+      opacity: 0.6; } }
+  @media (max-width: 420px) {
+    #slider.layout2 ul li {
+      height: 200px; } }
+
+@media (max-width: 420px) {
+  #slider.layout2 ul li:nth-of-type(2) {
+    height: 300px;
+    margin-top: 0;
+    opacity: 1.0; } }
+
+@media (min-width: 420px) {
+  #slider.layout2 ul li:nth-of-type(3) {
+    height: 450px;
+    margin-top: 0;
+    opacity: 1.0; } }
 
 #slider ul li div.slider-gradient {
   -webkit-transition: background-color 0.2s;
