--- a/sass/style.scss
+++ b/sass/style.scss
@@ -42,6 +42,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 # Media
 	## Captions
 	## Galleries
+# WP Core
 --------------------------------------------------------------*/
 @import "variables-site/variables-site";
 @import "mixins/mixins-master";
@@ -110,3 +111,8 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 # AV Custom
 --------------------------------------------------------------*/
 @import "av-misc";
+
+/*--------------------------------------------------------------
+# WP Core
+--------------------------------------------------------------*/
+@import "wp-core";
